<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.MainActivity">

    <Button
        android:background="@drawable/main_button_shape"
        android:id="@+id/Record_BP_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecordBloopPressure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Record_UA_Button"/>

    <Button
        android:background="@drawable/main_button_shape"
        android:id="@+id/Record_UA_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecordUricAcid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Record_BP_Button"
        app:layout_constraintBottom_toTopOf="@id/View_Record_Button"/>

    <Button
        android:background="@drawable/main_button_shape"
        android:id="@+id/View_Record_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ViewRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Record_UA_Button"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>