<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ViewRecordActivity">

    <include
        android:id="@+id/toolbar_section"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <RadioGroup
        android:id="@+id/data_type_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_section"
        app:layout_constraintBottom_toTopOf="@id/view_record_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/view_bp_rb"
            android:button="@null"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewBloopPressure"
            android:textColor="@drawable/data_type_radio_button_text_color"
            android:layout_weight="@integer/material_motion_duration_long_1"/>

        <RadioButton
            android:id="@+id/view_ua_rb"
            android:button="@null"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewUricAcid"
            android:textColor="@drawable/data_type_radio_button_text_color"
            android:layout_weight="@integer/material_motion_duration_long_1"/>
    </RadioGroup>

    <FrameLayout
        android:id="@+id/view_record_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data_type_radio_group"
        app:layout_constraintBottom_toTopOf="@id/data_presentation_radio_group"/>

    <RadioGroup
        android:id="@+id/data_presentation_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_record_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/view_text_rb"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/text_radio_button"
            android:text="@string/ViewText"
            android:textColor="@drawable/data_type_radio_button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"/>

        <RadioButton
            android:id="@+id/view_graph_rb"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/graph_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ViewGraph"
            android:textColor="@drawable/data_type_radio_button_text_color"
            android:layout_weight="@integer/material_motion_duration_long_1"/>
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>