<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RecordUaActivity">

    <include
        android:id="@+id/toolbar_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/record_tool_bar"/>

    <TextView
        android:id="@+id/UA_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UricAcid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_section"
        android:layout_marginTop="@dimen/TextPadding"
        android:textSize="@dimen/RecordTextSize"
        android:layout_marginLeft="@dimen/TextPadding" />

    <EditText
        android:id="@+id/UA_ET"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_shape"
        app:layout_constraintStart_toEndOf="@id/UA_Hint"
        app:layout_constraintTop_toTopOf="@id/UA_Hint"
        app:layout_constraintBottom_toBottomOf="@id/UA_Hint"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/TextPadding"/>

    <TextView
        android:id="@+id/BS_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BloodSugar"
        app:layout_constraintStart_toStartOf="@id/UA_Hint"
        app:layout_constraintTop_toBottomOf="@+id/UA_Hint"
        android:layout_marginTop="@dimen/TextPadding"
        android:textSize="@dimen/RecordTextSize"/>

    <EditText
        android:id="@+id/BS_ET"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_shape"
        app:layout_constraintStart_toEndOf="@id/BS_Hint"
        app:layout_constraintTop_toTopOf="@id/BS_Hint"
        app:layout_constraintBottom_toBottomOf="@id/BS_Hint"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/TextPadding"/>

    <Button
        android:id="@+id/Get_Weather_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getWeather"
        app:layout_constraintStart_toStartOf="@id/UA_Hint"
        app:layout_constraintEnd_toEndOf="@id/UA_ET"
        app:layout_constraintTop_toBottomOf="@id/BS_Hint"
        android:layout_marginTop="@dimen/TextPadding"/>





</androidx.constraintlayout.widget.ConstraintLayout>