<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.RecordBpActivity">

    <include
        android:id="@+id/toolbar_section"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/record_tool_bar"/>

    <TextView
        android:id="@+id/UpBP_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UpperBP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_section"
        android:layout_marginTop="@dimen/TextPadding"
        android:textSize="@dimen/RecordTextSize"
        android:layout_marginLeft="@dimen/TextPadding" />

    <EditText
        android:id="@+id/UpBP_ET"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_shape"
        app:layout_constraintStart_toEndOf="@id/UpBP_Hint"
        app:layout_constraintTop_toTopOf="@id/UpBP_Hint"
        app:layout_constraintBottom_toBottomOf="@id/UpBP_Hint"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/TextPadding"/>

    <TextView
        android:id="@+id/LowBP_Hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LowerBP"
        app:layout_constraintStart_toStartOf="@id/UpBP_Hint"
        app:layout_constraintTop_toBottomOf="@+id/UpBP_Hint"
        android:layout_marginTop="@dimen/TextPadding"
        android:textSize="@dimen/RecordTextSize"/>

    <EditText
        android:id="@+id/LowBP_ET"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_box_shape"
        app:layout_constraintStart_toEndOf="@id/LowBP_Hint"
        app:layout_constraintTop_toTopOf="@id/LowBP_Hint"
        app:layout_constraintBottom_toBottomOf="@id/LowBP_Hint"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/TextPadding"/>

    <Button
        android:id="@+id/Get_Weather_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getWeather"
        app:layout_constraintStart_toStartOf="@id/UpBP_Hint"
        app:layout_constraintEnd_toEndOf="@id/UpBP_ET"
        app:layout_constraintTop_toBottomOf="@id/LowBP_Hint"
        android:layout_marginTop="@dimen/TextPadding"/>

</androidx.constraintlayout.widget.ConstraintLayout>